--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -1,4 +1,2 @@
-@import "_mixins/font-face"
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
 
-+font-face("Circe", "../fonts/CirceRegular/CirceRegular")
-+font-face("Circe", "../fonts/CirceBold/CirceBold", 700)
