--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,4 +1,1 @@
-@import "_mixins/font-face";
-
-@include font-face("Circe", "../fonts/CirceRegular/CirceRegular");
-@include font-face("Circe", "../fonts/CirceBold/CirceBold", 700);
+@import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
