--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -4,6 +4,7 @@ $text: #000000;
 $itemBg: rgba(0, 0, 0, 0.03);
 $hoverBg: rgba(0, 102, 255, 0.1);
 $blue: #0066FF;
+$default-font: 'Open Sans', sans-serif;
 body {
 	font-size: 16px;
 	min-width: 320px;
@@ -11,6 +12,7 @@ body {
 	line-height: 1.65;
 	overflow-x: hidden;
 	color: $text;
+	font-family: $default-font;
 }
 
 .container{
